--- a/authentication/templates/authentication/emailotptemplate.html
+++ b/authentication/templates/authentication/emailotptemplate.html
@@ -10,9 +10,9 @@
                 margin: 0 auto;
             }
             .container {
-                width: 90%;
+                width: 100%;
                 margin: auto;
-                padding: 20px;
+                padding: 0 20px;
                 border-radius: 5px;
             }
             .otp {
@@ -26,15 +26,15 @@
         </style>
     </head>
     <body>
-        <img src="logo.svg" alt="seeran grades logo" style="margin-left: 40px">
+        <img src="logo.svg" alt="seeran grades logo" style="margin-left: 10px">
         <div class="container">   
-            <h2 style="text-align:center; font-size:70px; margin-bottom:120px">One Time Password</h2>
-            <p style="text-align:center; margin-bottom:140px">Thank you for using our service. As part of our security measures, we have generated a One-Time Password (OTP) for your account.</p>
-            <div style="background-color:white; position:relative; border-radius:20px; height:110px; margin-bottom:140px">
+            <h2 style="text-align:center; font-size:70px; margin-bottom:20px">One Time Password</h2>
+            <p style="text-align:center; margin-bottom:40px">Thank you for using our service. As part of our security measures, we have generated a One-Time Password (OTP) for your account.</p>
+            <div style="background-color:white; position:relative; border-radius:20px; height:110px; margin-bottom:40px">
                 <p class="otp" style="margin-bottom:100px; text-align:center; width:100%; font-size:70px; padding-top:18px">{{otp}}</p>
             </div>
             <p style="text-align:center">Remember, this OTP is only valid for 5 minutes.</p>
-            <p style="padding:70px 0"></p>
+            <p style="padding:20px 0"></p>
         </div>
     </body>
 </html>
