--- a/authentication/templates/authentication/emailotptemplate.html
+++ b/authentication/templates/authentication/emailotptemplate.html
@@ -26,7 +26,7 @@
         </style>
     </head>
     <body>
-        <img src="logo.svg" alt="seeran grades logo" style="margin-left: 10px">
+        <img src="logo.jpeg" alt="seeran grades logo" style="margin-left: 10px">
         <div class="container">   
             <h2 style="text-align:center; font-size:70px; margin-bottom:20px">One Time Password</h2>
             <p style="text-align:center; margin-bottom:40px">Thank you for using our service. As part of our security measures, we have generated a One-Time Password (OTP) for your account.</p>
