--- a/authentication/templates/authentication/emailotptemplate.html
+++ b/authentication/templates/authentication/emailotptemplate.html
@@ -4,7 +4,6 @@
         <style>
             body {
                 padding-top: 10px;
-                background-color: rgb(243, 244, 246);
                 font-family: Arial, sans-serif;
                 max-width: 1250px;
                 margin: 0 auto;
@@ -26,11 +25,9 @@
     </head>
     <body>
         <div class="container">   
-            <h2 style="text-align:center; font-size:70px; margin-bottom:20px">One Time Password</h2>
+            <h2 style="text-align:center; font-size:30px; margin-bottom:20px">One Time Password</h2>
             <p style="text-align:center; margin-bottom:40px">Thank you for using our service. As part of our security measures, we have generated a One-Time Password (OTP) for your account.</p>
-            <div style="background-color:white; position:relative; border-radius:20px; height:110px; margin-bottom:40px">
-                <p class="otp" style="margin-bottom:100px; text-align:center; width:100%; font-size:70px; padding-top:18px">{{otp}}</p>
-            </div>
+            <p class="otp" style="margin-bottom:50px; text-align:center; width:70%; margin:0 auto; font-size:20px; padding:18px 10px">{{otp}}</p>
             <p style="text-align:center">Remember, this OTP is only valid for 5 minutes.</p>
             <p style="padding:20px 0"></p>
         </div>
